--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,21 @@
 node_modules/
+
 .env
+.env.local
+.env.*.local
+
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
 .DS_Store
+Thumbs.db
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
