--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,23 @@
 node_modules/
+
 dist/
+.angular/
+
 .vite/
+
+*.tsbuildinfo
+
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 .DS_Store
+Thumbs.db
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
